fix: link target

--- a/example/storybook/src/components/Feedback/Spinner/index.stories.mdx
+++ b/example/storybook/src/components/Feedback/Spinner/index.stories.mdx
@@ -73,7 +73,7 @@ export default () => <Spinner />;
 #### Spinner
 
 Contains all Spinner related layout style props and actions.
-It inherits all the properties of React Native's [ActivityIndicator](https://reactnative.dev/docs/activityindicator#props){:target="\_blank" rel="noopener"} component.
+It inherits all the properties of React Native's [ActivityIndicator](https://reactnative.dev/docs/activityindicator#props) component.
 
 <br />
 <br />
