feat: menu fixes

--- a/example/storybook/src/components/Overlay/Menu/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/Menu/index.stories.mdx
@@ -501,7 +501,7 @@ import {
   Content,
   Group,
   GroupTitle,
-  MenuItem,
+  Item,
 } from '../components/core/menu/styled-components';
 
 // import the createMenu function
@@ -514,7 +514,7 @@ const Menu = createMenu({
   Content,
   Group,
   GroupTitle,
-  MenuItem,
+  Item,
 });
 
 // Using the menu component
