feat: npx commands resolved

--- a/example/storybook/src/getting-started/Installation/index.stories.mdx
+++ b/example/storybook/src/getting-started/Installation/index.stories.mdx
@@ -39,10 +39,10 @@ This will:
 
 ### Component Adder (Step 2)
 
-We can add a new component using npx `npx npx gluestack-ui add <package-name>`. For example, to add the button component package, you can run the following command:
+We can add a new component using npx `npx gluestack-ui add <package-name>`. For example, to add the button component package, you can run the following command:
 
 ```bash
-npx npx gluestack-ui add button
+npx gluestack-ui add button
 
 ```
 
@@ -122,7 +122,7 @@ export default function App() {
 #### Add component
 
 ```bash
- npx npx gluestack-ui add <component-name>
+ npx gluestack-ui add <component-name>
 ```
 
 #### Update component
