fix: high priority bugs fixed

--- a/example/storybook/src/components/Forms/Slider/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Slider/index.stories.mdx
@@ -35,7 +35,7 @@ import Wrapper from '../../Wrapper';
     metaData={{
       code: `
 <Center w={300}>
-  <Slider value={50} w="50%">
+  <Slider w="50%" defaultValue={30}>
     <Slider.Track>
       <Slider.FilledTrack />
     </Slider.Track>
