--- a/example/storybook/src/components/Forms/Radio/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Radio/index.stories.mdx
@@ -468,7 +468,7 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
     metaData={{
       code: `
 <Radio.Group>
-  <Radio isInvalid={true} >
+  <Radio isInvalid={true}  value="invalid">
     <Radio.Indicator>
       <Radio.Icon>
         <CircleIcon />
@@ -476,7 +476,7 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
     </Radio.Indicator>
     <Radio.Label>isInvalid</Radio.Label>
   </Radio>
-  <Radio isReadOnly={true}>
+  <Radio isReadOnly={true} value="readonly">
     <Radio.Indicator>
       <Radio.Icon>
         <CircleIcon />
@@ -484,7 +484,7 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
     </Radio.Indicator>
     <Radio.Label>isReadOnly</Radio.Label>
   </Radio>
-  <Radio isDisabled={true}>
+  <Radio isDisabled={true}  value="disabled">
     <Radio.Indicator>
       <Radio.Icon>
         <CircleIcon />
@@ -492,7 +492,7 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
     </Radio.Indicator>
     <Radio.Label>isDisabled</Radio.Label>
   </Radio>
-  <Radio isChecked={true}>
+  <Radio isChecked={true} value="checked">
     <Radio.Indicator>
       <Radio.Icon>
         <CircleIcon />
