--- a/example/storybook/src/components/Overlay/AlertDialog/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/AlertDialog/index.stories.mdx
@@ -63,7 +63,7 @@ function App(){
                     You're almost there! This alert-dialog is the final checkpoint before you reach your destination. Confirm that you're ready to go, and we'll hit the road!
                   </Text>
                 </AlertDialog.Body>
-                <AlertDialog.Footer>
+                <AlertDialog.Footer flexWrap='noWrap'>
                   <Button
                     variant="outline"
                     action="secondary"
