--- a/example/storybook/src/components/Overlay/Popover/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/Popover/index.stories.mdx
@@ -14,7 +14,13 @@ import { Meta } from '@storybook/addon-docs';
 
 <Meta title="components/Overlay/Popover" />
 
-import { Popover, Pressable, Text as PopoverText, Button } from './Popover';
+import {
+  Popover,
+  Pressable,
+  Text as PopoverText,
+  Button,
+  Box,
+} from './Popover';
 import { CloseIcon } from './Popover';
 import { transformedCode } from '../../../utils';
 import {
@@ -35,14 +41,16 @@ import Wrapper from '../../Wrapper';
     showComponentRenderer={true}
     showArgsController={false}
     metaData={{
-      code: ` 
+      code: `
+      <Box h={300}> 
 <Popover
-  placement={'top'}
+  placement={'bottom'}
   trigger={(triggerProps) => {
     return (
       <Pressable
         bgColor={'$red500'}
         borderRadius={'$md'}
+        mt='$12'
         {...triggerProps}
       >
         <Text color={'white'} padding="$3">
@@ -75,6 +83,7 @@ import Wrapper from '../../Wrapper';
     </Popover.Footer>
   </Popover.Content>
 </Popover>
+</Box>
 `,
       transformCode: (code) => {
         return transformedCode(code);
@@ -86,6 +95,7 @@ import Wrapper from '../../Wrapper';
         Pressable,
         Button,
         CloseIcon,
+        Box,
       },
       argsType: {},
     }}
