--- a/example/storybook/src/components/Forms/Tabs/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Tabs/index.stories.mdx
@@ -12,7 +12,7 @@ showHeader: true
 
 import { Meta } from '@storybook/addon-docs';
 
-<Meta title="components/Forms/Tabs" />
+<Meta title="components/Disclosure/Tabs" />
 
 import { Tabs, Text as TabsText } from './Tabs';
 import { transformedCode } from '../../../utils';
