fix: popover example

--- a/example/storybook/src/components/Overlay/Popover/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/Popover/index.stories.mdx
@@ -20,8 +20,8 @@ import {
   Text as PopoverText,
   Button,
   Box,
+  CloseIcon,
 } from './Popover';
-import { CloseIcon } from './Popover';
 import { transformedCode } from '../../../utils';
 import {
   AppProvider,
