feat: radio example updated

--- a/example/storybook/src/components/Forms/Radio/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Radio/index.stories.mdx
@@ -424,7 +424,7 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
     metaData={{
       code: `
 <Radio.Group alignItems="start">
-  <Radio size="sm">
+  <Radio size="sm" value="sm">
     <Radio.Indicator>
       <Radio.Icon>
         <CircleIcon />
@@ -432,7 +432,7 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
     </Radio.Indicator>
     <Radio.Label>Small size</Radio.Label>
   </Radio>
-  <Radio size="md">
+  <Radio size="md" value="md">
     <Radio.Indicator>
       <Radio.Icon>
         <CircleIcon />
@@ -440,7 +440,7 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
     </Radio.Indicator>
     <Radio.Label>Medium size</Radio.Label>
   </Radio>
-  <Radio size="lg">
+  <Radio size="lg" value="lg">
     <Radio.Indicator>
       <Radio.Icon>
         <CircleIcon />
