fix: provider example

--- a/example/storybook/src/components/Provider/Provider/index.stories.mdx
+++ b/example/storybook/src/components/Provider/Provider/index.stories.mdx
@@ -46,7 +46,7 @@ return (
 <Button onPress={toggleColorMode}>
 <Button.Text>Change Mode</Button.Text>
 </Button>
-<Pressable bg="$pink600" mb={'$4'}>
+          <Pressable bg="$pink600" my='$4' px="$1">
             <Text>Hello</Text>
           </Pressable>
           <Provider
@@ -69,6 +69,7 @@ return (
 `,
 scope: {
 Provider,
+Pressable,
 Text,
 config,
 Box,
