fix: image example

--- a/example/storybook/src/components/MediaAndIcons/Image/index.stories.mdx
+++ b/example/storybook/src/components/MediaAndIcons/Image/index.stories.mdx
@@ -98,7 +98,7 @@ It inherits all the properties of React Native's [Image](https://reactnative.dev
   {['xs', 'sm', 'md', 'lg', 'xl', '2xl'].map((size, index) => (
     <Image
       source={{
-        uri: "https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885__480.jpg",
+        uri: "https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80",
       }}
       size={size}
       borderRadius={"$full"}
