--- a/example/storybook/src/plugins/FontsPlugin/index.stories.mdx
+++ b/example/storybook/src/plugins/FontsPlugin/index.stories.mdx
@@ -14,11 +14,11 @@ import { AppProvider, CodePreview } from '@gluestack/design-system';
 
 # Fonts Plugin
 
-The font plugin is a plugin for the styled function that provides a unified approach for passing font families in your styles. It allows you to specify font families using an object with fontFamily, fontWeight, and fontStyle properties. On mobile platforms such as Expo, the plugin maps these properties to a single string font family using a mapFonts callback function. On the web, the font family object is passed through without modification.
+The font plugin is a plugin for the styled function that provides a unified approach for passing font families in your styles. It allows you to specify styled object with fontFamily, fontWeight, and fontStyle properties.
 
 ## Usage:
 
-Add the `FontResolver` plugin in your createStyled array. You can pass a mapFonts callback function to the constructor to customize the font resolution logic.
+Add the `FontResolver` plugin in your createStyled function. You can pass a mapFonts callback function to the constructor to customize the font resolution logic.
 
 ```js
 const styledFonts = createStyled([new FontResolver()]);
@@ -34,7 +34,11 @@ Original styled object that will be processed by mapFonts
 }
 ```
 
-By default, the `mapFonts` function will remove any spaces from the fontFamily property, concatenate the fontWeight property with its corresponding weight name (e.g. 800ExtraBold), and capitalize the first letter of the fontStyle property. This follows the [expo-google-fonts](https://github.com/expo/google-fonts/tree/master/font-packages/dev#readme) naming convention
+The `mapFonts` function is responsible for merging font styles in a unified format, based on the specified strategy. The strategy is determined by the `DANK_STYLE_FONT_RESOLVER_STRATEGY` environment variable, which can be set to either `expo` or `web`.
+
+If the strategy is set to `expo`, the function will follow the [expo-google-fonts](https://github.com/expo/google-fonts/tree/master/font-packages/dev#readme) naming convention by removing any spaces from the `fontFamily` property, concatenating the `fontWeight` property with its corresponding weight name (e.g. 800ExtraBold), and capitalizing the first letter of the `fontStyle` property. If the strategy is set to `web`, the function will follow a web naming convention. In either case, the `mapFonts` function will merge the font styles into a unified format that can be used by the application.
+
+Resolved fonts object
 
 ```js
 {
