--- a/example/storybook/src/plugins/AnimationPlugin/index.stories.mdx
+++ b/example/storybook/src/plugins/AnimationPlugin/index.stories.mdx
@@ -19,6 +19,18 @@ import { AnimationResolver } from '@dank-style/animation-plugin';
 
 Dank provides a Plugin to add support for Animation props using Animation Libraries like [@legendapp/motion](https://legendapp.com/open-source/motion/), [framer-motion](https://www.framer.com/motion/), and [moti](https://moti.fyi/). We will use `@legendapp/motion` in this example.
 
+### Installation:
+
+```bash
+# using npm
+
+npm install @dank-style/animation-plugin
+
+# using yarn
+
+yarn add @dank-style/animation-plugin
+```
+
 ## How to use:
 
 1. Initialization of the plugin:
