--- a/example/storybook/src/components/Overlay/AlertDialog/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/AlertDialog/index.stories.mdx
@@ -365,7 +365,11 @@ It inherits all the properties of React Native's [Pressable](https://reactnative
 
 #### AlertDialog.Backdrop
 
-It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
+It is React Native's [Pressable](https://reactnative.dev/docs/pressable#props) component, created using [@legendapp/motion's](https://legendapp.com/open-source/motion/) `createMotionAnimatedComponent` function to add animation to the component. You can use any declarative animation library you prefer.
+
+#### AlertDialog.Content
+
+It is [@legendapp/motion's](https://legendapp.com/open-source/motion/) [Motion.View](https://legendapp.com/open-source/motion/overview/) component. You can use any declarative animation library you prefer.
 
 #### AlertDialog.CloseButton
 
@@ -406,6 +410,8 @@ Uses React Native ARIA [@react-native-aria/focus](https://react-native-aria.geek
 ### Customizing the AlertDialog
 
 We have a function called `createAlertDialog` which can be used to create a custom alert-dialog component. This function takes in a configuration object which contains the styled components that you want to use for the alert-dialog. You can refer [dank.style](https://dank.style/) for more information on how to use styled components.
+
+You can read more on how to animate components [here](https://ui.gluestack.io/docs/getting-started/fonts).
 
 #### Usage
 
