--- a/example/storybook/src/components/Overlay/Modal/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/Modal/index.stories.mdx
@@ -369,7 +369,11 @@ It inherits all the properties of React Native's [Pressable](https://reactnative
 
 #### Modal.Backdrop
 
-It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
+It is React Native's [Pressable](https://reactnative.dev/docs/pressable#props) component, created using [@legendapp/motion's](https://legendapp.com/open-source/motion/) `createMotionAnimatedComponent` function to add animation to the component. You can use any declarative animation library you prefer.
+
+#### Modal.Content
+
+It is [@legendapp/motion's](https://legendapp.com/open-source/motion/) [Motion.View](https://legendapp.com/open-source/motion/overview/) component. You can use any declarative animation library you prefer.
 
 #### Modal.CloseButton
 
@@ -547,6 +551,8 @@ function App(){
 
 We have a function called `createModal` which can be used to create a custom modal component. This function takes in a configuration object which contains the styled components that you want to use for the modal. You can refer [dank.style](https://dank.style/) for more information on how to use styled components.
 
+You can read more on how to animate components [here](https://ui.gluestack.io/docs/getting-started/fonts).
+
 #### Usage
 
 ```jsx
@@ -560,6 +566,7 @@ import {
   Body,
   Backdrop,
 } from '../components/core/modal/styled-components';
+import { styled } from '../components/styled';
 
 // import the createModal function
 import { createModal } from '@gluestack-ui/modal';
@@ -573,6 +580,7 @@ const Modal = createModal({
   Footer,
   Body,
   Backdrop,
+  AnimatePresence: styled.Component, // Can be AnimatePresence from the library you are using
 });
 
 // Using the modal component
