--- a/example/storybook/src/components/Overlay/Popover/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/Popover/index.stories.mdx
@@ -382,7 +382,7 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
 #### Popover.Content
 
 Contains all backdrop related layout style props and actions.
-It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
+It is [@legendapp/motion's](https://legendapp.com/open-source/motion/) [Motion.View](https://legendapp.com/open-source/motion/overview/) component. You can use any declarative animation library you prefer.
 
 #### Popover.Header
 
@@ -428,6 +428,8 @@ Adheres to the [Dialog WAI-ARIA design pattern.]('https://www.w3.org/WAI/ARIA/ap
 ### Customizing the Popover
 
 We have a function called `createPopover` which can be used to create a custom popover component. This function takes in a configuration object which contains the styled components that you want to use for the Popover. You can refer [dank.style](https://dank.style/) for more information on how to use styled components.
+
+You can read more on how to animate components [here](https://ui.gluestack.io/docs/getting-started/fonts).
 
 #### Usage
 
