--- a/example/storybook/src/overview/Introduction/index.stories.mdx
+++ b/example/storybook/src/overview/Introduction/index.stories.mdx
@@ -62,7 +62,7 @@ gluestack-ui is committed to continuously expanding its library of components to
 
 To get involved with the gluestack-ui community, ask questions, and share tips, join our Discord.
 
-[Join our Discord](https://discord.com/invite/V5SU7HZSAQ)
+[Join our Discord](https://discord.com/95qQ84nf6f)
 
 ### Twitter
 
