fix: popover content

--- a/example/storybook/src/components/Others/Fab/index.stories.mdx
+++ b/example/storybook/src/components/Others/Fab/index.stories.mdx
@@ -241,7 +241,7 @@ It inherits all the properties of React Native's [Text](https://reactnative.dev/
     showArgsController={false}
     metaData={{
       code: `
-<View style={{height:60}}>
+<View style={{height:60}} bg="$red400" width="$full">
   <Fab>
     <HamburgerIcon mr="$2" color="$white" />
     <Fab.Label>LeftIcon</Fab.Label>
