--- a/example/storybook/src/components/Forms/Link/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Link/index.stories.mdx
@@ -36,7 +36,7 @@ import Wrapper from '../../Wrapper';
     metaData={{
       code: `
 <Link href="https://gluestack.io/">
-  <Text>Gluestack</Text>
+  <Text>gluestack</Text>
 </Link>
 `,
       transformCode: (code) => {
