--- a/example/storybook/src/components/Overlay/Popover/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/Popover/index.stories.mdx
@@ -120,6 +120,7 @@ import { Popover } from './components';
 ```jsx
 export default () => (
   <Popover>
+    <Popover.Backdrop />
     <Popover.Content>
       <Popover.Header>
         <Popover.CloseButton />
@@ -323,24 +324,6 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
         <Table.TR>
           <Table.TD>
             <Table.TText>
-              <InlineCode>animationPreset</InlineCode>
-            </Table.TText>
-          </Table.TD>
-          <Table.TD>
-            <Table.TText>{`'slide' | 'fade'`}</Table.TText>
-          </Table.TD>
-          <Table.TD>
-            <Table.TText>{`'slide'`}</Table.TText>
-          </Table.TD>
-          <Table.TD>
-            <Table.TText>
-              Specifies the animation preset for the popover.
-            </Table.TText>
-          </Table.TD>
-        </Table.TR>
-        <Table.TR>
-          <Table.TD>
-            <Table.TText>
               <InlineCode>contentSize</InlineCode>
             </Table.TText>
           </Table.TD>
@@ -381,7 +364,6 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
 
 #### Popover.Content
 
-Contains all backdrop related layout style props and actions.
 It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
 
 #### Popover.Header
