fix:  remove closeOnOverlayClick from prop table

--- a/example/storybook/src/components/Overlay/Popover/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/Popover/index.stories.mdx
@@ -285,7 +285,7 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
             </Table.TText>
           </Table.TD>
         </Table.TR>
-        <Table.TR>
+        {/* <Table.TR>
           <Table.TD>
             <Table.TText>
               <InlineCode>closeOnOverlayClick</InlineCode>
@@ -302,7 +302,7 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
               If true, the popover will close when the overlay is clicked.
             </Table.TText>
           </Table.TD>
-        </Table.TR>
+        </Table.TR> */}
         <Table.TR>
           <Table.TD>
             <Table.TText>
