--- a/example/storybook/src/getting-started/Installation/index.stories.mdx
+++ b/example/storybook/src/getting-started/Installation/index.stories.mdx
@@ -102,23 +102,20 @@ It's also recommended to set up your server-side rendering (SSR) correctly. To d
 
 ```jsx
 import * as React from 'react';
-// import { AppRegistry } from 'react-native';
-import NextDocument, { Html, Head, Main, NextScript } from 'next/document';
-import { flush } from '@dank-style/react';
+import { Html, Head, Main, NextScript } from 'next/document';
 import { AppRegistry } from 'react-native-web';
+import { flush } from '@dank-style/react';
 
-class Document extends NextDocument {
-  render() {
-    return (
-      <Html style={{ height: '100%' }}>
-        <Head />
-        <body style={{ height: '100%', overflow: 'hidden' }}>
-          <Main />
-          <NextScript />
-        </body>
-      </Html>
-    );
-  }
+function Document() {
+  return (
+    <Html lang="en">
+      <Head />
+      <body>
+        <Main />
+        <NextScript />
+      </body>
+    </Html>
+  );
 }
 
 export const style = `
@@ -132,10 +129,11 @@ html, body, #__next {
   min-height: 100%;
 }`;
 
-export async function getInitialProps({ renderPage }) {
+Document.getInitialProps = async ({ renderPage }: any) => {
   AppRegistry.registerComponent('Main', () => Main);
   const { getStyleElement } = AppRegistry.getApplication('Main');
   const page = await renderPage();
+
   const styles = [
     // eslint-disable-next-line react/jsx-key
     <style dangerouslySetInnerHTML={{ __html: style }} />,
@@ -143,9 +141,7 @@ export async function getInitialProps({ renderPage }) {
     ...flush(),
   ];
   return { ...page, styles: React.Children.toArray(styles) };
-}
-
-Document.getInitialProps = getInitialProps;
+};
 
 export default Document;
 ```
