fix: removed contentSize prop from Popover

--- a/example/storybook/src/components/Overlay/Popover/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/Popover/index.stories.mdx
@@ -321,7 +321,7 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
             </Table.TText>
           </Table.TD>
         </Table.TR>
-        <Table.TR>
+        {/* <Table.TR>
           <Table.TD>
             <Table.TText>
               <InlineCode>contentSize</InlineCode>
@@ -338,7 +338,7 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
               Specifies the content size for the popover.
             </Table.TText>
           </Table.TD>
-        </Table.TR>
+        </Table.TR> */}
         <Table.TR>
           <Table.TD>
             <Table.TText>
