--- a/example/storybook/src/plugins/FontsPlugin/index.stories.mdx
+++ b/example/storybook/src/plugins/FontsPlugin/index.stories.mdx
@@ -66,7 +66,11 @@ Resolved fonts object
           fontFamily: 'Nunito Sans',
           fontWeight: 800,
           fontStyle: 'italic',
-          fontSize: '$xl'
+          fontSize: '$xl',
+          color: '$black',
+          _dark: {
+            color: '$white'
+          },
         });
         return (
          <Provider config={config}>
