fix: doc headings

--- a/example/storybook/src/plugins/FontsPlugin/index.stories.mdx
+++ b/example/storybook/src/plugins/FontsPlugin/index.stories.mdx
@@ -46,7 +46,7 @@ Resolved fonts object
 }
 ```
 
-## Example:
+### Example:
 
 <AppProvider>
   <CodePreview
@@ -87,7 +87,7 @@ Resolved fonts object
 
 <br />
 
-### mapFonts:
+## mapFonts:
 
 If you want to use a different naming convention for your fonts, you can provide a custom `mapFonts` function to the font plugin constructor.
 
